--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -665,16 +665,16 @@ a.default:link, a.default:visited, a.default:hover {
 }
 .dark {
 	color:#f1f1f1;
-	border: 1px solid rgba(73,73,73,0.2);
-	text-shadow:-1px -1px 0 #262626;
-	background: #262727;
-	-moz-box-shadow: inset 0 1px 0 rgba(92, 92, 92, 1), 0 1px 2px rgba(130, 130, 130, 0.3);
-	-webkit-box-shadow: inset 0 1px 0 rgba(92, 92, 92, 1), 0 1px 2px rgba(130, 130, 130, 0.3);
-	box-shadow: inset 0 1px 0 rgba(92, 92, 92, 1), 0 1px 2px rgba(130, 130, 130, 0.3);
-	background: -webkit-gradient(linear, left top, left bottom, from(#4d4e4e), to(#262727));
-	background: -moz-linear-gradient(top, #4d4e4e, #262727);
-	background: -o-linear-gradient(rgb(78,78,78), rgb(38,38,38));
-	/*	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4d4e4e', endColorstr='#262727'");*/
+	border: 0px solid rgba(111,111,111,0.2);
+	text-shadow:1px 1px 0 rgba(45,45,45,1);
+	background: rgb(117,128,135); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(117,128,135,1) 0%, rgba(45,45,45,1) 94%, rgba(111,111,111,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(117,128,135,1)), color-stop(94%,rgba(45,45,45,1)), color-stop(100%,rgba(111,111,111,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(117,128,135,1) 0%,rgba(45,45,45,1) 94%,rgba(111,111,111,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(117,128,135,1) 0%,rgba(45,45,45,1) 94%,rgba(111,111,111,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(117,128,135,1) 0%,rgba(45,45,45,1) 94%,rgba(111,111,111,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(117,128,135,1) 0%,rgba(45,45,45,1) 94%,rgba(111,111,111,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#758087', endColorstr='#6f6f6f',GradientType=0 ); /* IE6-9 */
 	position:relative;
 	behavior: url("js/PIE.htc");
 }
@@ -739,7 +739,7 @@ a.blue:link, a.blue:visited, a.blue:hover {
 	background: #f3f3f3;
 }
 .dark:hover {
-	background: #4d4e4e;
+	background: #2d2d2d;
 }
 .light:hover {
 	background: #a0b4b9;
