--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1397,7 +1397,7 @@ a.b-all:hover {
 	background:none;
 }
 
-/* ----- boxShadow for undergraduate academics----- */
+/* ----- boxShadow inset----- */
 .box-inset{
 	background-color:#fff;
 	-webkit-box-shadow:inset 0px 4px 8px rgba(50, 50, 50, 0.41);
@@ -1410,18 +1410,52 @@ a.b-all:hover {
 
 .box-inset-gray{
 	background: rgb(255,255,255); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(240,240,241,1) 84%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(84%,rgba(240,240,241,1))); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* IE10+ */
-background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f0f0f1',GradientType=0 ); /* IE6-9 */
-
+	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(240,240,241,1) 84%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(84%,rgba(240,240,241,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* IE10+ */
+	background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f0f0f1',GradientType=0 ); /* IE6-9 */
 	-webkit-box-shadow:inset 0px 4px 8px rgba(50, 50, 50, 0.41);
 	-moz-box-shadow:   inset 0px 4px 8px rgba(50, 50, 50, 0.41);
 	box-shadow:        inset 0px 4px 8px rgba(50, 50, 50, 0.41);
 	margin-bottom:20px;
 	-webkit-border-radius: 8px;
 	border-radius: 8px;
+}
+
+/* ----- header background block color----- */
+
+.bg-gray-shadow {
+	/*background:#d8d8de url(../images/Type6.png) no-repeat bottom center;*/
+	background:transparent url(../images/Type6.png) no-repeat 0px 36px;
+	height:50px;
+	color:#242424;
+}
+.bg-gray-shadow a:link {
+	color:#4f4f4f;
+}
+.bg-gray-shadow a:hover, .bg-gray-shadow a:visited {
+	color:#a1a1a1;
+}
+.bg-gray {
+	background: rgb(255,255,255); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(253,253,253,1) 61%, rgba(237,237,237,1) 98%, rgba(222,222,222,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(61%,rgba(253,253,253,1)), color-stop(98%,rgba(237,237,237,1)), color-stop(100%,rgba(222,222,222,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(253,253,253,1) 61%,rgba(237,237,237,1) 98%,rgba(222,222,222,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(253,253,253,1) 61%,rgba(237,237,237,1) 98%,rgba(222,222,222,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(253,253,253,1) 61%,rgba(237,237,237,1) 98%,rgba(222,222,222,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(253,253,253,1) 61%,rgba(237,237,237,1) 98%,rgba(222,222,222,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dedede',GradientType=0 ); /* IE6-9 */
+	border-top:solid 2px #e7e6e6;
+	border-right:solid 2px #e7e6e6;
+	border-left:solid 2px #e7e6e6;
+	padding:6px 4px 6px 4px;
+	webkit-border-top-right-radius:4px;
+	-webkit-border-top-left-radius: 4px;
+	-moz-border-radius-topleft: 4px;
+	-moz-border-radius-topright: 4px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
 }
