--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -250,8 +250,8 @@ body.front {
 	-ms-border-radius:0em 0em 0em .5em;
 	border-radius:0em 0em 0em .5em;
 }
-.megamenu-grid3-width { max-width:150px; }
-.megamenu-grid4-width { max-width:225px; }
+#megamenu-grid3-width { max-width:150px; }
+#megamenu-grid4-width { max-width:225px; }
 
 #graduate-programs-certificates { max-width:400px; }
 
