--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -254,6 +254,18 @@ body.front {
 	-ms-border-radius:0em 0em 0em .5em;
 	border-radius:0em 0em 0em .5em;
 }
+
+#mini-panel-alumni_megamenu .main-menu-undergraduate-lists .bottom-more-row td,
+#mini-panel-alumni_megamenu .main-menu-undergraduate-lists tr.bottom-more-row:hover td, 
+#mini-panel-alumni_megamenu .main-menu-undergraduate-lists tr.bottom-more-row:hover td.active{
+	border-top:#dddedf solid 1px;
+	-webkit-border-radius:0em 0em .5em .5em ;
+	-moz-border-radius:0em 0em .5em .5em;
+	-o-border-radius:0em 0em .5em .5em;
+	-ms-border-radius:0em 0em .5em .5em;
+	border-radius:0em 0em .5em .5em;
+} 
+
 #megamenu-grid3-width { max-width:150px; }
 #megamenu-grid4-width { max-width:220px;  }
 
