--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -265,6 +265,16 @@ body.front {
 	-ms-border-radius:0em 0em .5em .5em;
 	border-radius:0em 0em .5em .5em;
 } 
+#mini-panel-athletics_megamenu .main-menu-undergraduate-lists .bottom-more-row td,
+#mini-panel-athletics_megamenu .main-menu-undergraduate-lists tr.bottom-more-row:hover td, 
+#mini-panel-athletics_megamenu .main-menu-undergraduate-lists tr.bottom-more-row:hover td.active{
+	border-top:#dddedf solid 1px;
+	-webkit-border-radius:0em 0em .5em 0 ;
+	-moz-border-radius:0em 0em .5em 0;
+	-o-border-radius:0em 0em .5em 0;
+	-ms-border-radius:0em 0em .5em 0;
+	border-radius:0em 0em .5em 0;
+} 
 
 #megamenu-grid3-width { max-width:150px; }
 #megamenu-grid4-width { max-width:220px;  }
