--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -297,11 +297,9 @@ body.front {
 #mini-panel-visit_megamenu_block table.main-menu-undergraduate-lists, #mini-panel-apply_megamenu table.main-menu-undergraduate-lists {
 	min-width:200px;
 }
-/* needed if no image in the right 
 #mini-panel-apply_megamenu .megamenu-text {
-	padding:20px;
+	padding:0px 10px;
 }
-*/
 .pane-21 {padding-left:20px;}
 
 /**********************************************
