current link styling on event page

--- a/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
+++ b/www/sites/all/themes/lynchburg/css/lynchburg-alpha-default.css
@@ -537,7 +537,8 @@ body.front {
 	margin-left:20px;
 }
 .lc-calendar-current-link {
-	display:none;
+	float:left;
+	margin-left:20px;
 }
 .lc-calendar-header-buttons {
 	float:right;
