global and default
library accordion styles

--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1507,15 +1507,64 @@ a.b-all:hover {
 	border-top-right-radius: 4px;
 }
 
-/* ----- LIBRARY TABS----- 
-Header styles are in the user styles  light button*/
-
-.ui-accordion .ui-accordion-content{
-	padding:10px 15px 20px 15px;
-	min-width:180px;
+/* ----- LIBRARY TABS----- */
+#quickset-library_accordion .ui-accordion-header{
+	min-width:175px;
 }
-/*#ebscohostsearchtext{
-	margin-right:5px;
-	
-}*/
+#quickset-library_accordion .ui-accordion-content{
+	padding:10px 8px 20px 8px;
+	min-width:175px;
+}
+#quickset-library_accordion .ui-accordion-header{
+	color:#f1f1f1;
+	border: 1px solid rgba(255,255,255,0.2);
+	text-shadow:1px 1px 0 #24658e;
+	background: rgb(101,135,161); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(101,135,161,1) 0%, rgba(70,104,129,1) 99%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(101,135,161,1)), color-stop(99%,rgba(70,104,129,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(101,135,161,1) 0%,rgba(70,104,129,1) 99%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(101,135,161,1) 0%,rgba(70,104,129,1) 99%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(101,135,161,1) 0%,rgba(70,104,129,1) 99%); /* IE10+ */
+	background: linear-gradient(top,  rgba(101,135,161,1) 0%,rgba(70,104,129,1) 99%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6587a1', endColorstr='#466881',GradientType=0 ); /* IE6-9 */
+	position:relative;
+	behavior: url("js/PIE.htc");
+}
+#quickset-library_accordion .ui-accordion-header a:link, #quickset-library_accordion .ui-accordion-header a:hover{
+	color:#f1f1f1;
+	text-decoration:none;
+}
+#quickset-library_accordion .ui-accordion-header:hover{
+	background: #466881; 
+}
+/*omega default button style override*/
+input[type="submit"]{
+	border: solid 1px #d5d6db;
+background: rgb(255,255,255); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(47%,rgba(246,246,246,1)), color-stop(100%,rgba(237,237,237,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* IE10+ */
+background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(246,246,246,1) 47%,rgba(237,237,237,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
+-moz-border-radius: 0.5em 0.5em 0.5em 0.5em;
+	-webkit-border-radius:0.5em 0.5em 0.5em 0.5em;
+	border-radius: 0.5em 0.5em 0.5em 0.5em;
+	-moz-box-shadow: 0 1px 2px rgba(130, 130, 130, 0.2);
+	-webkit-box-shadow: 0 1px 2px rgba(130, 130, 130, 0.2);
+	box-shadow: 0 1px 2px rgba(130, 130, 130, 0.2);
+}
+input:hover[type="submit"]{
+	border: 1px solid rgba(202,202,202,0.5);
+	text-shadow:1px 1px 0 #fcfcfc;
+	background: #e4e4e4;
+	-moz-box-shadow: inset 0 1px 0 rgba(249, 249, 249, 1), 0 1px 2px rgba(130, 130, 130, 0.3);
+	-webkit-box-shadow: inset 0 1px 0 rgba(249, 249, 249, 1), 0 1px 2px rgba(130, 130, 130, 0.3);
+	box-shadow: inset 0 1px 0 rgba(249, 249, 249, 1), 0 1px 2px rgba(130, 130, 130, 0.3);
+	background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#e3e3e3));
+	background: -moz-linear-gradient(top, #f3f3f3, #e3e3e3);
+	background: -o-linear-gradient(rgb(243,243,243), rgb(228,228,228));
+	/*	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='#e3e3e3');*/
+}
 
