--- a/www/sites/all/themes/lynchburg/css/global.css
+++ b/www/sites/all/themes/lynchburg/css/global.css
@@ -1245,6 +1245,7 @@ footer#section-footer li {
 footer#section-footer li a {
 	color:#b9b9b9;
 }
+
 footer#section-footer li a:hover {
 	color:#fff;
 	text-decoration:underline;
@@ -1471,7 +1472,30 @@ a.b-all:hover {
 	-webkit-border-radius: 8px;
 	border-radius: 8px;
 }
+#schools{
+	background: rgb(255,255,255); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(240,240,241,1) 84%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(84%,rgba(240,240,241,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* IE10+ */
+	background: linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(240,240,241,1) 84%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f0f0f1',GradientType=0 ); /* IE6-9 */
+	-webkit-box-shadow:inset 0px 4px 8px rgba(50, 50, 50, 0.41);
+	-moz-box-shadow:   inset 0px 4px 8px rgba(50, 50, 50, 0.41);
+	box-shadow:        inset 0px 4px 8px rgba(50, 50, 50, 0.41);
+	margin-bottom:20px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	padding:20px;
+}
 
+#schools li{
+	list-style:none;
+	padding-left: .5em;
+	padding-top:8px;
+	background-image:none;
+}
 /* ----- header background block color----- */
 
 .bg-gray-shadow {
@@ -1510,6 +1534,7 @@ a.b-all:hover {
 /* ----- LIBRARY TABS----- */
 #quickset-library_accordion .ui-accordion-header{
 	min-width:175px;
+	margin-bottom:0px;
 }
 #quickset-library_accordion .ui-accordion-content{
 	padding:10px 8px 20px 8px;
@@ -1536,6 +1561,11 @@ a.b-all:hover {
 }
 #quickset-library_accordion .ui-accordion-header:hover{
 	background: #466881; 
+}
+
+
+#ebscohostsearchtext{
+	margin-right:5px;
 }
 /*omega default button style override*/
 input[type="submit"]{
