--- a/www/sites/all/themes/lynchburg/css/user-styles.css
+++ b/www/sites/all/themes/lynchburg/css/user-styles.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 
 /* ========== LIST STYLES ========== */
-ol, ul {
+ol, ul{
 	list-style:none;
 	margin:0 0 1em;
 	padding: 0;
@@ -25,7 +25,7 @@ ol.type-2 {
 	list-style: decimal;
 }
 /* ========== UNORDERED LISTS ========== */
-ul.unordered li {
+ul.unordered li{
 	list-style:none;
 	padding-left: 2.1em;
 	background-position: 0 0.6em;
@@ -45,7 +45,7 @@ ul.unordered.type-4 li {
 	background:none;
 	padding-left: 0;
 }
-ul.unordered.type-5 li {
+ul.unordered.type-5 li{
 	background-image: url("../images/icons/small/arrow_state_gray_right.png");
 }
 /* tables still need 'cellspacing="0"' in the markup */
@@ -374,7 +374,7 @@ table {
 }
 
 .feature_table tr:hover td, .table_grey tr:hover td, .table_dark tr:hover td, .table_blue tr:hover td, .table_red tr:hover td,  .feature_table tr.even:hover td.active, .table_grey tr.even:hover td.active, .table_dark tr.even:hover td.active, .table_blue tr.even:hover td.active, .table_red tr.even:hover td.active, .feature_table tr.odd:hover td.active, .table.grey tr.odd:hover td.active, .table_dark tr.odd:hover td.active, .table_blue tr.odd:hover td.active, .table_red tr.odd:hover td.active {
-	background:#ececec;
+	background:#f7f7f7;
 	-moz-transition: all 0.2s linear 0s;
 	-webkit-transition: all 0.2s linear 0s;
 	-o-transition: all 0.2s linear 0s;
@@ -382,20 +382,20 @@ table {
 
 /* --- Table Grey --- */
 table.table_grey thead th {
-	/* for non-css3 browsers */
-	background: #d9d9d9;
-	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f1f1f1', endColorstr='#d9d9d9');
-	/* for webkit browsers */
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f1f1f1), to(#d9d9d9), color-stop(.6, #e9e9e9));
-	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg, #d9d9d9, #e9e9e9, #f1f1f1 100%);/*background-position: 0 0;*/
+	background: rgb(247,247,247); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(247,247,247,1) 0%, rgba(237,237,237,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(247,247,247,1)), color-stop(100%,rgba(237,237,237,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(237,237,237,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(237,237,237,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(237,237,237,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(247,247,247,1) 0%,rgba(237,237,237,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#ededed',GradientType=0 ); /* IE6-9 */
 }
 table.table_grey thead tr th.left_round {
-	border-left:1px solid #f6f6f6;
+	border-left:1px solid #bdbcbd;
 }
 table.table_grey thead tr th.right_round {
-	border-right:1px solid #f6f6f6;
+	border-right:1px solid #bdbcbd;
 }
 /* --- Table Dark --- */
 table.table_dark thead th {
@@ -404,14 +404,14 @@ table.table_dark thead th {
 	border-right:1px solid #595a5a;
 	text-shadow:0 -1px #2a2b2b;
 	color:#fff;
-	/* for non-css3 browsers */
-	background: #5a5f63;
-	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#727b82', endColorstr='#323232');
-	/* for webkit browsers */
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#727b82), to(#323232), color-stop(.6, #5a5f63));
-	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg, #323232, #5a5f63, #727b82 100%);
+	background: rgb(117,128,135); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(117,128,135,1) 0%, rgba(45,45,45,1) 94%, rgba(111,111,111,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(117,128,135,1)), color-stop(94%,rgba(45,45,45,1)), color-stop(100%,rgba(111,111,111,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(117,128,135,1) 0%,rgba(45,45,45,1) 94%,rgba(111,111,111,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(117,128,135,1) 0%,rgba(45,45,45,1) 94%,rgba(111,111,111,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(117,128,135,1) 0%,rgba(45,45,45,1) 94%,rgba(111,111,111,1) 100%); /* IE10+ */
+	background: linear-gradient(top,  rgba(117,128,135,1) 0%,rgba(45,45,45,1) 94%,rgba(111,111,111,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#758087', endColorstr='#6f6f6f',GradientType=0 ); /* IE6-9 */
 }
 table.table_dark thead tr th.left_round {
 	border-left:1px solid #2b2c2c;
@@ -423,17 +423,18 @@ table.table_dark thead tr th.right_round {
 table.table_blue thead th {
 	/*background-position: 0 -181px;*/
 	font-size:16px;
-	border-right:1px solid #1369a4;
+	border-right:1px solid #698ba3;
 	text-shadow:1px 1px #104468;
 	color:#fff;
 	/* for non-css3 browsers */
-	background: #125889;
-	/* for IE */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#2187cf', endColorstr='#125889');
-	/* for webkit browsers */
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#2187cf), to(#125889), color-stop(.6, #1b74b0));
-	/* for firefox 3.6+ */
-	background: -moz-linear-gradient(25% 87% 90deg, #125889, #1b74b0, #2187cf 100%);/*background-position: 0 0;*/
+	background: rgb(101,135,161); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(101,135,161,1) 0%, rgba(70,104,129,1) 99%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(101,135,161,1)), color-stop(99%,rgba(70,104,129,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(101,135,161,1) 0%,rgba(70,104,129,1) 99%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(101,135,161,1) 0%,rgba(70,104,129,1) 99%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(101,135,161,1) 0%,rgba(70,104,129,1) 99%); /* IE10+ */
+	background: linear-gradient(top,  rgba(101,135,161,1) 0%,rgba(70,104,129,1) 99%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6587a1', endColorstr='#466881',GradientType=0 ); /* IE6-9 */
 }
 table.table_blue thead tr th.left_round {
 	border-left:1px solid #1369a4;
